--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div>
             <div>
                 <!-- menu icon -->
-                <i class="fa-solid fa-bars" id="menuIcon" onclick="location.href='https://www.google.com/'"></i>
+                <i class="fa-solid fa-bars" id="menuIcon"></i>
             </div>
 
             <!-- content part 1 -->
@@ -36,8 +36,8 @@
                     <h1><b class="building">The Building Services Company</b></h1>
                     <h4><i>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
                             pariatur. Excepteur sint occaecat cupidatat non proident.</i></h4>
-                    <h4><i>Images from <u>Billioinphotos</u></i></h4>
-                    <button>Learn More</button>
+                    <h4><i>Images from <u onclick="location.href='https://billionphotos.com/'">Billioinphotos</u></i></h4>
+                    <button  onclick="location.href='https://nicepage.com/website-templates/preview/the-building-services-company-76708?device=desktop'">Learn More</button>
                 </div>
                 <div>
                     <img class="FirstImage"
