--- a/index.html
+++ b/index.html
@@ -215,7 +215,9 @@
 
 
                     <div class="Page-Four-div2">
-                       <div> <h1>About Us</h1></div>
+                        <div>
+                            <h1>About Us</h1>
+                        </div>
 
                         <div>
                             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
@@ -231,10 +233,27 @@
 
                 <div class="boxRow">
                     <div class="Page-Four-div3">
-                        <h2>We are the sum of our collective passion, vision and expertise.</h2>
+                        <div>
+                            <h2>We are the sum of our collective passion, vision and expertise.</h2>
+                        </div>
+                        <div>
+                            <p>Sample text. Click to select the Text Element.</p>
+                        </div>
+                        <div><u
+                                onclick="location.href='https://nicepage.com/website-templates/preview/the-building-services-company-76708?device=desktop'">More</u>
+                        </div>
                     </div>
                     <div class="Page-Four-div4">
-                        <h2>Equipment connections</h2>
+                        <div>
+                            <h2>Equipment connections</h2>
+                        </div>
+                        <div>
+                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                                nulla pariatur. Excepteur sint occaecat cupidatat.</p>
+                        </div>
+                        <div><u
+                                onclick="location.href='https://nicepage.com/website-templates/preview/the-building-services-company-76708?device=desktop'">More</u>
+                        </div>
                     </div>
                 </div>
             </div>
