Fifth-Page-Added

--- a/index.html
+++ b/index.html
@@ -255,9 +255,73 @@
                                 onclick="location.href='https://nicepage.com/website-templates/preview/the-building-services-company-76708?device=desktop'">More</u>
                         </div>
                     </div>
+
+                </div>
+
+                <div>
+                    <p>Image from <u
+                            onclick="location.href='https://id.freepikcompany.com/v2/sign-up?client_id=freepik&lang=en'">Freepik</u>
+                    </p>
                 </div>
             </div>
         </div>
+
+
+        <!-- End of Fourth Page -->
+
+        <!-- Fifth Page Starts Here -->
+        <div class="Page5-MainDiv">
+
+
+
+            <div class="left-side">
+                <div class="page5LeftSideup">
+                    <div>
+                        <h1 class="page5text">Our Company provides general contracting services</h1>
+                    </div>
+                    <div><i>Image from <u
+                                onclick="location.href='https://id.freepikcompany.com/v2/sign-up?client_id=freepik&lang=en'">Freepik</u></i>
+                    </div>
+                    <div><button>Learn More</button></div>
+                </div>
+                <div class="page5LeftSidedown">
+                    <div>
+                        <h2>We build to fit anything
+                        </h2>
+                    </div>
+                    <div>
+                        <p>Sample text. Click to select the text box. Click again or double click to start editing the
+                            text.
+                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+                            anim
+                            id est laborum.</p>
+                    </div>
+                    <div><u
+                            onclick="location.href='https://nicepage.com/website-templates/preview/the-building-services-company-76708?device=desktop'">more</u>
+                    </div>
+                </div>
+            </div>
+            <div class="right-side">
+                <div>
+                    <img src="https://imgs.search.brave.com/X0GusjjRDU7WBv_pE2O1Gvc7FTDua0_zvXNLWTSwIVk/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9pbWcu/ZnJlZXBpay5jb20v/ZnJlZS12ZWN0b3Iv/Y2FydG9vbi1zY2Vu/ZS1idWlsZGluZy1j/b25zdHJ1Y3Rpb24t/c2l0ZV8xMzA4LTEw/NTI0OC5qcGc_c2l6/ZT02MjYmZXh0PWpw/Zw"
+                        alt="building-cartoon-image" class="building-cartoon-image">
+                </div>
+                <div>
+                    <p style="height: 300px; width: 450px; text-align: center; padding: 10px;">Sit amet massa vitae tortor condimentum lacinia quis. Ornare arcu dui vivamus arcu felis bibendum ut. Consectetur adipiscing elit duis tristique sollicitudin. Volutpat lacus laoreet non curabitur. Magna fringilla urna porttitor rhoncus. Ultricies leo integer malesuada nunc vel risus commodo viverra. Ipsum a arcu cursus vitae congue. Imperdiet dui accumsan sit amet nulla facilisi. Tincidunt dui ut ornare lectus sit.</p>
+                </div>
+            </div>
+
+        </div>
+        <!-- Fifth Page Ends Here -->
+
+
+        <!-- Sixth Page Starts here -->
+
+
+        <div>
+            
+        </div>
+
 
 
     </div>
