--- a/index.html
+++ b/index.html
@@ -307,7 +307,12 @@
                         alt="building-cartoon-image" class="building-cartoon-image">
                 </div>
                 <div>
-                    <p style="height: 300px; width: 450px; text-align: center; padding: 10px;">Sit amet massa vitae tortor condimentum lacinia quis. Ornare arcu dui vivamus arcu felis bibendum ut. Consectetur adipiscing elit duis tristique sollicitudin. Volutpat lacus laoreet non curabitur. Magna fringilla urna porttitor rhoncus. Ultricies leo integer malesuada nunc vel risus commodo viverra. Ipsum a arcu cursus vitae congue. Imperdiet dui accumsan sit amet nulla facilisi. Tincidunt dui ut ornare lectus sit.</p>
+                    <p style="height: 300px; width: 450px; text-align: center; padding: 10px;">Sit amet massa vitae
+                        tortor condimentum lacinia quis. Ornare arcu dui vivamus arcu felis bibendum ut. Consectetur
+                        adipiscing elit duis tristique sollicitudin. Volutpat lacus laoreet non curabitur. Magna
+                        fringilla urna porttitor rhoncus. Ultricies leo integer malesuada nunc vel risus commodo
+                        viverra. Ipsum a arcu cursus vitae congue. Imperdiet dui accumsan sit amet nulla facilisi.
+                        Tincidunt dui ut ornare lectus sit.</p>
                 </div>
             </div>
 
@@ -319,7 +324,19 @@
 
 
         <div>
-            
+
+        </div>
+        <!-- End of Sixth Page -->
+
+
+        <!-- Last Page Footer -->
+        <div>
+            <footer>
+                <p><u onclick="location.href='https://nicepage.com/website-templates'">Website Templates</u> created
+                    with <u
+                        onclick="location.href='https://website73962.nicepage.io/Home.html?version=85cba17f-0353-48e1-8162-f87e30311'">Website
+                        Builder Software</u></p>
+            </footer>
         </div>
 
 
