CSS Edited for page 5

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                     <div><i>Image from <u
                                 onclick="location.href='https://id.freepikcompany.com/v2/sign-up?client_id=freepik&lang=en'">Freepik</u></i>
                     </div>
-                    <div><button>Learn More</button></div>
+                    <div><button class="page5Button">Learn More</button></div>
                 </div>
                 <div class="page5LeftSidedown">
                     <div>
