Page 6 and 7 added

--- a/index.html
+++ b/index.html
@@ -323,10 +323,170 @@
         <!-- Sixth Page Starts here -->
 
 
+        <div class="page-six">
+            <div>
+                <h1>Complete Building Services
+                </h1>
+            </div>
+
+            <!-- heading bahek ko kura haru -->
+
+            <div class="sixthPage-MainDiv">
+                <div>
+                    <img src="https://imgs.search.brave.com/kySacsiDJNA9FkTI_oKJ6Te1fLM4DMtys01TxEafnZ8/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9pLnBp/bmltZy5jb20vb3Jp/Z2luYWxzLzJkLzVi/LzQ4LzJkNWI0ODk3/NDI1OTIxNTE1Nzhh/Nzc0NTE5YzQ0NTJl/LmpwZw"
+                        alt="sixthPageImage" style="border-radius: 50%;">
+                </div>
+                <div class="sixthPage-rightside">
+                    <div class="page6Box">
+                        <!-- first box -->
+                        <div>
+                            <h1>Digital Solutions
+                            </h1>
+                        </div>
+                        <div>
+                            <p><i>Sample text. Click to select the text box. Click again or double click to start
+                                    editing the text. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+                                    officia deserunt mollit anim id est laborum.
+
+                                </i></p>
+                        </div>
+                    </div>
+
+                    <!-- second box -->
+
+                    <div class="page6Box">
+                        <div>
+                            <h1>What We Do
+                            </h1>
+                        </div>
+                        <div>
+                            <p><i>Sample text. Click to select the text box. Click again or double click to start
+                                    editing the text. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+                                    officia deserunt mollit anim id est laborum.
+
+                                </i></p>
+                        </div>
+                    </div>
+
+                    <!-- Third box -->
+
+                    <div class="page6Box">
+                        <div>
+                            <h1>Road Design
+                            </h1>
+                        </div>
+                        <div>
+                            <p><i>Sample text. Click to select the text box. Click again or double click to start
+                                    editing the text. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+                                    officia deserunt mollit anim id est laborum.
+
+                                </i></p>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div>
+                    <p>Image from <u
+                            onclick="location.href='https://id.freepikcompany.com/v2/sign-up?client_id=freepik&lang=en'">Freepik</u>
+                    </p>
+                </div>
+
+            </div>
+        </div>
+        <!-- End of Sixth Page -->
+
+
+        <!-- seventh Page Starts Here -->
+
+        <div class="page7maindiv">
+            <div>
+                <h1 style="margin-left: 40%; margin-right: 40%;">What We Do
+                </h1>
+            </div>
+
+            <!-- paragraph part  page 7-->
+
+            <div style="margin-left: 350px; margin-right: 350px;">
+                <p><i>We believe that for societies to thrive, we must all hold ourselves accountable for tomorrow. That
+                        means creating innovative solutions for the challenges of the future. It’s this mindset that
+                        inspires us to stay curious, act locally, and think internationally.
+
+                    </i></p>
+            </div>
+
+            <!-- page 7 Box part -->
+            <div class="page7Box">
+
+                <!-- box 1 -->
+
+                <div class="page7BoxContents">
+                    <div><img
+                            src="https://imgs.search.brave.com/zTXVXjzyR1jb_y7pS0HWAr4pzIYE_H6h6TiSyHtfGxQ/rs:fit:500:0:0/g:ce/aHR0cHM6Ly9oaXBz/LmhlYXJzdGFwcHMu/Y29tL2htZy1wcm9k/L2ltYWdlcy9tb2Rl/cm4tbGl2aW5nLXJv/b20taW50ZXJpb3It/M2QtcmVuZGVyLXJv/eWFsdHktZnJlZS1p/bWFnZS0xNjY0Mjk1/ODYxLmpwZz9jcm9w/PTAuNjY2MzV4dzox/eGg7Y2VudGVyLHRv/cCZyZXNpemU9MzYw/Oio"
+                            alt="image1" class="page7BoxImage"></div>
+                    <div>
+                        <p><i>Design-Build
+                            </i></p>
+                    </div>
+                </div>
+
+                <!-- box2 -->
+                <div class="page7BoxContents">
+                    <div><img
+                            src="https://imgs.search.brave.com/zTXVXjzyR1jb_y7pS0HWAr4pzIYE_H6h6TiSyHtfGxQ/rs:fit:500:0:0/g:ce/aHR0cHM6Ly9oaXBz/LmhlYXJzdGFwcHMu/Y29tL2htZy1wcm9k/L2ltYWdlcy9tb2Rl/cm4tbGl2aW5nLXJv/b20taW50ZXJpb3It/M2QtcmVuZGVyLXJv/eWFsdHktZnJlZS1p/bWFnZS0xNjY0Mjk1/ODYxLmpwZz9jcm9w/PTAuNjY2MzV4dzox/eGg7Y2VudGVyLHRv/cCZyZXNpemU9MzYw/Oio"
+                            alt="image2" class="page7BoxImage"></div>
+                    <div>
+                        <p><i>Remodeling</i></p>
+                    </div>
+
+                </div>
+
+                <!-- box3 -->
+                <div class="page7BoxContents">
+                    <div><img
+                            src="https://imgs.search.brave.com/zTXVXjzyR1jb_y7pS0HWAr4pzIYE_H6h6TiSyHtfGxQ/rs:fit:500:0:0/g:ce/aHR0cHM6Ly9oaXBz/LmhlYXJzdGFwcHMu/Y29tL2htZy1wcm9k/L2ltYWdlcy9tb2Rl/cm4tbGl2aW5nLXJv/b20taW50ZXJpb3It/M2QtcmVuZGVyLXJv/eWFsdHktZnJlZS1p/bWFnZS0xNjY0Mjk1/ODYxLmpwZz9jcm9w/PTAuNjY2MzV4dzox/eGg7Y2VudGVyLHRv/cCZyZXNpemU9MzYw/Oio"
+                            alt="image3" class="page7BoxImage"></div>
+                    <div>
+                        <p><i>City Spaces
+                            </i></p>
+                    </div>
+
+                </div>
+
+                <!-- box 4 -->
+
+                <div class="page7BoxContents">
+                    <div><img
+                            src="https://imgs.search.brave.com/zTXVXjzyR1jb_y7pS0HWAr4pzIYE_H6h6TiSyHtfGxQ/rs:fit:500:0:0/g:ce/aHR0cHM6Ly9oaXBz/LmhlYXJzdGFwcHMu/Y29tL2htZy1wcm9k/L2ltYWdlcy9tb2Rl/cm4tbGl2aW5nLXJv/b20taW50ZXJpb3It/M2QtcmVuZGVyLXJv/eWFsdHktZnJlZS1p/bWFnZS0xNjY0Mjk1/ODYxLmpwZz9jcm9w/PTAuNjY2MzV4dzox/eGg7Y2VudGVyLHRv/cCZyZXNpemU9MzYw/Oio"
+                            alt="image4" class="page7BoxImage"></div>
+                    <div>
+                        <p><i>Civil Engineers
+                            </i></p>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- page 7 footer -->
+            <div>
+                <p>Image from <u
+                        onclick="location.href='https://id.freepikcompany.com/v2/sign-up?client_id=freepik&lang=en'">Freepik</u>
+                </p>
+            </div>
+
+        </div>
+
+        <!-- End of Page 7-->
+
+
+        <!-- Page 8 Starts Here -->
+
         <div>
 
         </div>
-        <!-- End of Sixth Page -->
+
+
+        <!-- End of Page 8 -->
 
 
         <!-- Last Page Footer -->
@@ -345,5 +505,3 @@
 
 
 </body>
-
-</html>
