--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                 </div>
             </div>
 
-            <!-- page 7 footer -->
+            <!-- page 7 footer part -->
             <div>
                 <p>Image from <u
                         onclick="location.href='https://id.freepikcompany.com/v2/sign-up?client_id=freepik&lang=en'">Freepik</u>
@@ -482,6 +482,94 @@
         <!-- Page 8 Starts Here -->
 
         <div>
+            <hr>
+
+            <!-- Box and Image  -->
+
+            <div>
+                <img src="https://imgs.search.brave.com/YomiWlVxCrJLC-jlnAPGZrpW83jgS3gGh8c6XxLSIy8/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9na254/dC5jb20vY29sbGVj/dGl2ZW5vdW5zL2Vu/Z2luZWVycy9jb2xs/ZWN0aXZlLW5vdW5z/LWZvci1lbmdpbmVl/cnMud2VicA"
+                    alt="page8Image" class="page8Image">
+                <div class="page8-Box-Part">
+                    <div>
+                        <h1 style="margin-left: auto; margin-right: auto;">Our Story
+                        </h1>
+                    </div>
+                    <div>
+                        <p>Egestas purus viverra accumsan in nisl nisi. Enim nec dui nunc mattis enim ut. Consequat
+                            interdum
+                            varius sit amet mattis vulputate enim nulla. Fusce ut placerat orci nulla pellentesque
+                            dignissim
+                            enim sit amet.
+
+                        </p>
+                    </div>
+                    <div>
+                        <p>Image from <u
+                                onclick="location.href='https://id.freepikcompany.com/v2/sign-up?client_id=freepik&lang=en'">Freepik</u>
+                        </p>
+                    </div>
+                    <div>
+                        <button
+                            onclick="location.href='https://nicepage.com/website-templates/preview/the-building-services-company-76708?device=desktop'">Learn
+                            More
+                        </button>
+                    </div>
+
+
+
+
+                </div>
+            </div>
+
+            <!-- Image ra Box Muni ko Part (Page 8) -->
+
+            <div class="page-8-After-Image">
+                <div>
+                    <h1 class="page-8-heading">Complete Building Services
+                    </h1>
+                </div>
+                <div class="page-8-counts-MainDiv">
+
+                    <!-- first circle -->
+                    <div class="page-8-circle-Main-div">
+                        <div class="page-8-counts"></div>
+                        <div>
+                            <p>SQUARE FEET MANAGED
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- second Circle -->
+                    <div class="page-8-circle-Main-div">
+                        <div class="page-8-counts"></div>
+                        <div>
+                            <p>EMPLOYEES ON OUR TEAM
+                            </p>
+                        </div>
+
+                    </div>
+
+                    <!-- third circle -->
+                    <div class="page-8-circle-Main-div">
+                        <div class="page-8-counts"></div>
+                        <div>
+                            <p>HAPPY CLIENTS
+                            </p>
+                        </div>
+
+                    </div>
+
+
+                    <!-- fourth circle -->
+                    <div class="page-8-circle-Main-div">
+                        <div class="page-8-counts"></div>
+                        <div>
+                            <p>AWARDS</p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
 
         </div>
 
@@ -505,3 +593,4 @@
 
 
 </body>
+</html>
