8th and 9th page added

--- a/index.html
+++ b/index.html
@@ -577,6 +577,87 @@
         <!-- End of Page 8 -->
 
 
+
+        <!-- Second-last Page Starts Here -->
+
+        <div class="page-9-mainDiv">
+            <!-- left side part -->
+            <div class="left-side-main-div">
+                <div>
+                    <div>
+                        <h2>Contact Us</h2>
+                    </div>
+                    <div>
+                        <p>Image from <u
+                                onclick="location.href='https://id.freepikcompany.com/v2/sign-up?client_id=freepik&lang=en'">Freepik</u>
+                        </p>
+                    </div>
+                </div>
+                <br>
+                <div>
+                    <div class="icon">
+                        <div>
+                            <i class="fa-solid fa-phone"></i>
+                        </div>
+                        <div>
+                            <p>Call Us</p>
+                        </div>
+                    </div>
+                    <div>
+                        <p>1 (234) 567-891, 1 (234) 987-654</p>
+                    </div>
+                </div>
+                <br>
+                <div>
+                    <div class="icon">
+                        <div>
+                            <i class="fa-solid fa-location-dot"></i>
+                        </div>
+                        <div>
+                            <p>Location</p>
+                        </div>
+                    </div>
+                    <div>
+                        <p>121 Rock Sreet, 21 Avenue, New York, NY 92103-9000</p>
+                    </div>
+                </div>
+                <br>
+                <div>
+                    <div class="icon">
+                        <div>
+                            <i class="fa-solid fa-clock"></i>
+                        </div>
+                        <div>
+                            <p>Business Hours</p>
+                        </div>
+                    </div>
+                    <div>
+                        <p>Mon – Fri …… 10 am – 8 pm, Sat, Sun ....… Closed</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- right side part -->
+
+            <div class="right-side-main-div">
+                <div>
+                    <div>Email<input type="email" placeholder="Enter a valid email address" id="inputText"></div>
+                    <div>Name<input type="text" placeholder="Enter Your Name" id="inputText">
+                    </div>
+
+                </div>
+                <div>Address <input type="text" placeholder="Enter Your Address" id="inputText"></div>
+                <div>Message <input type="text" placeholder="Message Here"></div>
+                <div><button>Submit</button></div>
+            </div>
+
+
+
+
+        </div>
+
+        <!-- End of Second-last page -->
+
         <!-- Last Page Footer -->
         <div>
             <footer>
@@ -593,4 +674,5 @@
 
 
 </body>
+
 </html>
