--- a/index.html
+++ b/index.html
@@ -482,7 +482,8 @@
         <!-- Page 8 Starts Here -->
 
         <div>
-            <hr>
+            <!-- <hr> -->
+            <div class="blue"></div>
 
             <!-- Box and Image  -->
 
