last 2 pages and CSS edites

--- a/index.html
+++ b/index.html
@@ -12,18 +12,24 @@
 <body>
 
     <div>
-        <header>
+        <!-- <header>
             <img src=" https://csite.nicepage.com/Images/logo-w.png" alt="nicepage-logo" class="logo">
 
-            <!-- icons -->
-            <!-- <div class="iconInHeader">
+            icons
+            <div class="iconInHeader">
                 <i class="fa-solid fa-desktop"></i>
                 <i class="fa-solid fa-laptop"></i>
                 <i class="fa-solid fa-tablet-screen-button"></i>
                 <i class="fa-solid fa-mobile-screen-button"></i>
-            </div> -->
-        </header>
+            </div>
+        </header> -->
+
+
         <div>
+            <div>
+                <img src="https://ccapp.nicepage.com/b2d6f27e34721b86b9aa2311504422b7dbba8623/images/default-logo.png"
+                    alt="logo" class="logo">
+            </div>
             <div>
                 <!-- menu icon -->
                 <i class="fa-solid fa-bars" id="menuIcon"></i>
@@ -33,8 +39,8 @@
             <div class="maindiv">
 
                 <div class="firstPageText">
-                    <h1><b class="building">The Building Services Company</b></h1>
-                    <h4><i>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                    <h1 class="building"><b>The Building Services Company</b></h1>
+                    <h4 class="firstpage-paragraph"><i>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
                             pariatur. Excepteur sint occaecat cupidatat non proident.</i></h4>
                     <h4><i>Images from <u onclick="location.href='https://billionphotos.com/'">Billioinphotos</u></i>
                     </h4>
@@ -42,10 +48,10 @@
                         onclick="location.href='https://nicepage.com/website-templates/preview/the-building-services-company-76708?device=desktop'">Learn
                         More</button>
                 </div>
-                <div>
-                    <img class="FirstImage"
+                <div class="FirstImage">
+                    <img
                         src="https://images03.nicepagecdn.com/c461c07a441a5d220e8feb1a/c2e8ae791c785b1ab5510283/ggg-min.png?version="
-                        alt="construction-image">
+                        alt="construction-image" id="photo">
                 </div>
             </div>
 
@@ -63,10 +69,13 @@
                 <br>
                 <h1 class="page2Text"><b>Building Services, Maintenance and Refurbishment</b></h1>
                 <br>
-                <h5><i>Company offers mechanical, electrical and plumbing engineering for all types of buildings,
+                <h5><i class="page2Paragraph">Company offers mechanical, electrical and plumbing engineering for all
+                        types of buildings,
                         transportation facilities and industry projects according to our clients’ specific requirements.
                     </i></h5>
             </div>
+
+            <!-- Page 2 Box Part -->
 
             <div class="SecondPageBox">
 
@@ -140,7 +149,7 @@
         <!-- Third Page here -->
 
         <div class="thirdPage">
-            <p>SAMPLE HEADLINE</p>
+            <p class="sampleheading">SAMPLE HEADLINE</p>
 
             <div>
                 <h2>Building Services</h2>
@@ -149,47 +158,62 @@
 
             <br>
 
-            <div class="LeadingTheWay">
-                <div>
-                    <h3>Leading the Way</h3>
-                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                        mollit anim id est laborum.</p>
+
+            <div class="thirdPage-div3">
+                <div class="leadingpart">
+
+                    <div class="LeadingTheWay">
+                        <div>
+                            <h3>Leading the Way</h3>
+                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                                nulla
+                                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                                deserunt
+                                mollit anim id est laborum.</p>
+                        </div>
+
+
+                    </div>
+
+
+                    <br>
+
+
+                    <div>
+                        <h3>Mechanical Engineering</h3>
+                        <p>Mechanical engineering is an important aspect of our integrated building services offering.
+                            By
+                            collaborating with other experts across the necessary disciplines, we can ensure that our
+                            designs
+                            are innovative, practical and feasible.</p>
+                    </div>
+
+                    <br>
+
+                    <p>Services include:</p><br>
+                    <div>
+                        <ul>
+                            <li>Heating, Ventilating and Air Conditioning (HVAC)</li>
+                            <li>Computational Fluid Dynamics (CFD) modelling/analysis</li>
+                            <li>Advanced technologies (e.g. displacement ventilation, activated structures, geothermal)
+                            </li>
+                            <li>Ultra-low energy systems</li>
+                            <li>Thermal storage</li>
+                            <li>CHEM/bio-hazard mitigation</li>
+                            <li>Building automation systems and controls</li>
+                            <li>Building envelope analysis and optimisation</li>
+                        </ul>
+
+                    </div>
                 </div>
+
+
+                <!-- contact part page 3 -->
                 <div class="contactexpert">
                     <button>CONTACT ANY EXPERT</button>
                     <p>-------</p>
                     <button>SHARE</button>
                 </div>
-
-            </div>
-
-
-            <br>
-
-
-            <div>
-                <h3>Mechanical Engineering</h3>
-                <p>Mechanical engineering is an important aspect of our integrated building services offering. By
-                    collaborating with other experts across the necessary disciplines, we can ensure that our designs
-                    are innovative, practical and feasible.</p>
-            </div>
-
-            <br>
-
-            <p>Services include:</p><br>
-            <div>
-                <ul>
-                    <li>Heating, Ventilating and Air Conditioning (HVAC)</li>
-                    <li>Computational Fluid Dynamics (CFD) modelling/analysis</li>
-                    <li>Advanced technologies (e.g. displacement ventilation, activated structures, geothermal)</li>
-                    <li>Ultra-low energy systems</li>
-                    <li>Thermal storage</li>
-                    <li>CHEM/bio-hazard mitigation</li>
-                    <li>Building automation systems and controls</li>
-                    <li>Building envelope analysis and optimisation</li>
-                </ul>
-
             </div>
 
         </div>
@@ -307,7 +331,7 @@
                         alt="building-cartoon-image" class="building-cartoon-image">
                 </div>
                 <div>
-                    <p style="height: 300px; width: 450px; text-align: center; padding: 10px;">Sit amet massa vitae
+                    <p style="height: 300px; width: 450px; text-align: center; padding: 10px; text-align: left; word-wrap: break-word;    font-family: 'Open Sans',sans-serif;">Sit amet massa vitae
                         tortor condimentum lacinia quis. Ornare arcu dui vivamus arcu felis bibendum ut. Consectetur
                         adipiscing elit duis tristique sollicitudin. Volutpat lacus laoreet non curabitur. Magna
                         fringilla urna porttitor rhoncus. Ultricies leo integer malesuada nunc vel risus commodo
@@ -324,7 +348,7 @@
 
 
         <div class="page-six">
-            <div>
+            <div class="page-six-heading">
                 <h1>Complete Building Services
                 </h1>
             </div>
@@ -334,7 +358,7 @@
             <div class="sixthPage-MainDiv">
                 <div>
                     <img src="https://imgs.search.brave.com/kySacsiDJNA9FkTI_oKJ6Te1fLM4DMtys01TxEafnZ8/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9pLnBp/bmltZy5jb20vb3Jp/Z2luYWxzLzJkLzVi/LzQ4LzJkNWI0ODk3/NDI1OTIxNTE1Nzhh/Nzc0NTE5YzQ0NTJl/LmpwZw"
-                        alt="sixthPageImage" style="border-radius: 50%;">
+                        alt="sixthPageImage" style="border-radius: 50%; height: 750px; width: 750px;">
                 </div>
                 <div class="sixthPage-rightside">
                     <div class="page6Box">
@@ -385,14 +409,18 @@
                     </div>
 
                 </div>
+              
 
-                <div>
-                    <p>Image from <u
-                            onclick="location.href='https://id.freepikcompany.com/v2/sign-up?client_id=freepik&lang=en'">Freepik</u>
-                    </p>
-                </div>
+               
 
             </div>
+
+            <div>
+                <p>Image from <u
+                        onclick="location.href='https://id.freepikcompany.com/v2/sign-up?client_id=freepik&lang=en'">Freepik</u>
+                </p>
+            </div>
+
         </div>
         <!-- End of Sixth Page -->
 
@@ -586,7 +614,7 @@
             <div class="left-side-main-div">
                 <div>
                     <div>
-                        <h2>Contact Us</h2>
+                        <h2 style="font-size: 60px">Contact Us</h2>
                     </div>
                     <div>
                         <p>Image from <u
@@ -596,9 +624,9 @@
                 </div>
                 <br>
                 <div>
-                    <div class="icon">
+                    <div class="icon-detail">
                         <div>
-                            <i class="fa-solid fa-phone"></i>
+                            <i class="fa-solid fa-phone icon"></i>
                         </div>
                         <div>
                             <p>Call Us</p>
@@ -610,9 +638,9 @@
                 </div>
                 <br>
                 <div>
-                    <div class="icon">
+                    <div class="icon-detail">
                         <div>
-                            <i class="fa-solid fa-location-dot"></i>
+                            <i class="fa-solid fa-location-dot icon"></i>
                         </div>
                         <div>
                             <p>Location</p>
@@ -624,9 +652,9 @@
                 </div>
                 <br>
                 <div>
-                    <div class="icon">
+                    <div class="icon-detail">
                         <div>
-                            <i class="fa-solid fa-clock"></i>
+                            <i class="fa-solid fa-clock icon"></i>
                         </div>
                         <div>
                             <p>Business Hours</p>
@@ -641,15 +669,15 @@
             <!-- right side part -->
 
             <div class="right-side-main-div">
-                <div>
+                <div class="name-and-email">
                     <div>Email<input type="email" placeholder="Enter a valid email address" id="inputText"></div>
                     <div>Name<input type="text" placeholder="Enter Your Name" id="inputText">
                     </div>
 
                 </div>
                 <div>Address <input type="text" placeholder="Enter Your Address" id="inputText"></div>
-                <div>Message <input type="text" placeholder="Message Here"></div>
-                <div><button>Submit</button></div>
+                <div>Message <input type="text" placeholder="Message Here" id="inputText-message"></div>
+                <div><button class="submit-button-page-9"><b>SUBMIT</b></button></div>
             </div>
 
 
@@ -658,6 +686,35 @@
         </div>
 
         <!-- End of Second-last page -->
+
+        <!-- Last Page -->
+
+        <div class="lastpageMainDiv">
+            <div>
+                <div>
+                    <img src="https://capp.nicepage.com/a261ab00b8f724f72bbca7f23892ac18d02909db/images/default-logo.png"
+                        alt="logoimage" class="logoimage">
+                </div>
+                <div class="socialMediaLinks">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+
+                </div>
+            </div>
+
+            <hr class="lastPageLine">
+
+
+            <div class="paragraphPageLast">
+
+                <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+            </div>
+
+        </div>
+        <!-- End of Last Page -->
+
 
         <!-- Last Page Footer -->
         <div>
