social media link added

--- a/index.html
+++ b/index.html
@@ -696,10 +696,10 @@
                         alt="logoimage" class="logoimage">
                 </div>
                 <div class="socialMediaLinks">
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-facebook" onclick="location.href='https://www.facebook.com/'"></i>
+                    <i class="fa-brands fa-twitter" onclick="location.href='https://twitter.com/'"></i>
+                    <i class="fa-brands fa-instagram" onclick="location.href='https://www.instagram.com/'"></i>
+                    <i class="fa-brands fa-linkedin" onclick="location.href='https://www.linkedin.com/'"></i>
 
                 </div>
             </div>
